--- a/index.html
+++ b/index.html
@@ -6,13 +6,46 @@
    <title>Document</title>
 </head>
 <body>
-   <h1>Исходные данные для проектирования системы вентиляции</h1>
+   <h1>1. Исходные данные для проектирования системы вентиляции</h1>
    <div>
       <input type="text" placeholder="Введите объект">
       <!-- <h2>1.1. Общестевнное здание: Комплекс со зрительным залом на 300 мест</h2> -->
    </div>
    <p>1.2. Район строительства - <input type="text" placeholder="Введите город"></p>
    <p>1.3. Климатические данные</p>
+   <h2>2. Организация воздухообмена в помещениях</h2>
+   <p>Площадь поперечного сечения каналов, воздуховодов, живого сечения воздухораспределителей, м2:</p>
+   <img src="img/01.png" alt="">
+   <p>где	L – расход воздуха, [м3/ч], </p>
+   <p>𝝑 рек - рекомендуемая скорость движения воздуха в канале, воздуховоде, распределителе, м/с.</p>
+   <p>Принимаются к установке каналы, воздуховоды, воздухораспределители с близкой по значению площадью сечения Ао и определяется их количество:</p>
+   <img src="img/02.png" alt="">
+   <p>Определяем действительную скорость движения воздуха в каналах, воздуховодах, воздухораспределителях, м/с:</p>
+   <img src="img/03.png" alt="">
+   <p>Расчет ведется по рекомендуемым скоростям.</p>
+   <p>Рассчитаем площадь сечения вертикальных каналов и воздухораспределителей, устанавливаемых на них. Результаты сводим в таблицу:</p>
+   <h2>3. Расчет воздухораспределения для помещения большого объема с вентиляцией </h2>
+   <div>
+      <label for="">Рассмотрим помещение № <input type="text" placeholder="Введите номер"></label> – Кабинет стоматолога. Размеры расчётного помещения <label for="">A = <input type="text" placeholder="Введите длину помещения" data-length-room></label> м (длина), <label for="">B = <input type="text" placeholder="Введите ширину помещения" data-width-room></label> м (ширина), <label for="">Hп = <input type="text" placeholder="Введите высоту помещения" data-height-room></label> м. схема организация воздухообмена – один приток, одна вытяжка с подачей воздуха в верхнюю зону и удалением также из верхней зоны. Расчётный воздухообмен в помещении (ТП) и температура внутреннего воздуха равны<label for=""> L = <input type="text" placeholder="Введите значение" data-сalculated-air></label> м3/ч , <label for="">tв = <input type="text" placeholder="Введите значение" data-degree-internal></label>°C. Для воздухораспределения были выбраны алюминиевые решётки АМН. Так как помещение небольшое, то число воздухораспределителей примем N = 1.
+   </div>
+   <p>Длина пути струи до точки входа в рабочую зону x равна:</p>
+   <img src="img/04.png" alt="">
+   <div>
+      где B – глубина помещения от стены до стены в направлении развития струи равна <label for="">B = <input type="text" placeholder="Введите ширину помещения" data-width-room></label> м (ширина помещения), h_(р.з.) – высота рабочей зоны равна <label for=""><input type="text" placeholder="Введите значение" data-height-working></label> м, т.к. люди в помещении сидят.
+   </div>
+   <p>Х = <label for=""><input type="text" placeholder="Введите ширину помещения" data-width-room></label> + <label for=""><input type="text" placeholder="Введите высоту помещения" data-height-room></label> - <label for=""><input type="text" placeholder="Введите значение" data-height-working></label> = <span data-sum-x>?</span></p>
+   <p>Расход воздуха через один воздухораспределитель равен:</p>
+   <img src="img/05.png" alt="">
+   <p>где N - количество решеток</p>
+   <div>
+      L_o = <label for=""><input type="text" placeholder="Введите значение" data-сalculated-air></label> / 1 = <span data-sumLo>?</span> м^3/ч
+   </div>
+   <p>Ориентировочная площадь живого сечения A_ор для прохода воздуха:</p>
+   <img src="img/06.png" alt="">
+   <p>где v_ор – рекомендуемая скорость воздуха в живом сечении, которая находится в пределах от 1 до 2 м/с. </p>
+   <div>
+      Аор = <label for=""><input type="text" placeholder="Введите значение" data-сalculated-air></label> / (1,5 ⋅ 3600) = <span data-sumAop>?</span> м^2
+   </div>
    <script src="script.js"></script>
 </body>
 </html>
