--- a/index.html
+++ b/index.html
@@ -46,6 +46,117 @@
    <div>
       Аор = <label for=""><input type="text" placeholder="Введите значение" data-сalculated-air></label> / (1,5 ⋅ 3600) = <span data-sumAop>?</span> м^2
    </div>
+   <div>
+      Принимаем к установке решётку АМН с длиной 250 мм и шириной 650 мм, с фактической площадью А_факт = <label for=""><input type="text" placeholder="Введите значение" data-afact></label> м^2, скоростным коэффициентом m = <label for=""><input type="text" placeholder="Введите значение" data-speed-coefficient></label> и температурным коэффициентом n = <label for=""><input type="text" placeholder="Введите значение" data-temperature-coefficient></label>.
+   </div>
+   <p>Фактическая скорость воздуха на выпуске:</p>
+   <img src="img/07.png" alt="">
+   <div>
+      v_0 = <label for=""><input type="text" placeholder="Введите значение" data-сalculated-air></label> / (3600 ⋅ <label for=""><input type="text" placeholder="Введите значение" data-afact></label>) = <span data-sumVo>?</span> м/с
+   </div>
+   <p>Скорость на оси струи v_x в точке входа в рабочую зону и отклонение температуры от температуры рабочей зоны 〖Δt〗_x в этой же точке:</p>
+   <p>где 〖Δt〗_0 – разность температуры воздуха в рабочей зоне и температуры притока, </p>
+   <img src="img/08.png" alt="">
+   <div>
+      Δt_x = t_в - t_п = <label for=""><input type="text" placeholder="Введите значение" data-temperature-m></label> - 18 = <span data-sumTx>?</span> °C
+   </div>
+   <p>k_n - коэффициент неизотермичности</p>
+   <img src="img/09.png" alt="">
+   <div>
+      k_n = ∛(1 + (<label for=""><input type="text" placeholder="?" data-sumX disabled></label> / <label for=""><input type="text" placeholder="Введите значение" data-height-room></label>)^2 ) = <span data-sumKn>?</span>
+   </div>
+   <p>K_con - коэффициент стеснения</p>
+   <img src="img/10.png" alt="">
+   <div>
+      где Lcon – расход воздуха удаляемого в конце развития струи, м3/ч. <br>
+      При подаче воздуха в верхнюю зону горизонтальными струями за Lcon принимается расход воздуха, удаляемого через вытяжные отверстия для ячейки помещения, обслуживаемой одним. Lcon = <label for=""><input type="text" placeholder="Введите значение" data-сalculated-air></label> м3/ч.
+   </div>
+   <img src="img/11.png" alt="">
+   <p>где Aр – площадь помещения перпендикулярная потоку воздуха, приходящаяся на один воздухораспределитель, м2. </p>
+   <img src="img/12.png" alt="">
+   <p>где      lпом,  Hпом – длина и высота помещения соответственно; <br>
+      N – количество приточных каналов в помещении.</p>
+   <div>
+      A_p = (<label for=""><input type="text" placeholder="Введите длину помещения" data-length-room></label> ⋅ <label for=""><input type="text" placeholder="Введите высоту помещения" data-height-room></label>) / 1 = <label for=""><span data-sumAp>?</span></label> м^2
+   </div>
+   <div>
+      Теперь находим: А ̄= <label for=""><input type="text" placeholder="Введите значение" data-afact></label> / <label for=""><input type="text" placeholder="?" data-sumAp disabled></label> = <span data-tireA>?</span>, х ̄= <label for=""><input type="text" placeholder="?" data-sumX disabled></label> / (<label for=""><input type="text" placeholder="Введите значение" data-speed-coefficient></label> ⋅ √<label for=""><input type="text" placeholder="?" data-sumAp disabled></label>) = <span data-tireX>?</span>  
+   </div>
+   <img src="img/13.png" alt="">
+   <div>
+      К_с = 0,9 +(0,9 ⋅ <label for=""><input type="text" placeholder="Введите значение" data-сalculated-air></label>) /(<label for=""><label for=""><input type="text" placeholder="Введите значение" data-speed-coefficient></label> ⋅ <label for=""><input type="text" placeholder="Введите значение" data-сalculated-air></label>) ⋅ 5,4 / √<label for=""><input type="text" placeholder="?" data-sumAp disabled></label> ⋅ √(<label for=""><input type="text" placeholder="Введите значение" data-afact></label> / <label for=""><input type="text" placeholder="?" data-sumAp disabled></label>) = <span data-Ks>?</span>
+   </div>
+   <div>
+      ϑ_х = (<label for=""><input type="text" placeholder="Введите значение" data-speed-coefficient></label> ⋅ <label for=""><input type="text" placeholder="?" data-sumVo disabled></label> ⋅ √(<label for=""><input type="text" placeholder="Введите значение" data-afact></label>) ) / 5,4 ⋅ 1,1 ⋅ 0,9 = <span data-vqx>?</span> м/с
+   </div>
+   <div>
+      Δt_х = (<label for=""><input type="text" placeholder="Введите значение" data-temperature-coefficient></label> ⋅ 2 ⋅ √(<label for=""><input type="text" placeholder="Введите значение" data-afact></label>) ) / 5,4 ⋅ 1 / (1,1 ⋅ 0,9) = <span data-sumTringleTx>?</span> °С
+   </div>
+   <p>Допустимые значения скорости и температуры приточного воздуха по СП 60.13330.2012 Приложение Б и В равны: </p>
+   <img src="img/14.png" alt="">
+   <p>где K_п=1,4 – коэффициент перехода от нормируемой скорости движения воздуха в помещении к максимальной скорости в струе воздуха, в зоне прямого воздействия струи воздуха в пределах основного участка при лёгкой категории работ (по табл. Б.1 СП 60.13330.2012), v_н=0,25 м/с – допустимая скорость движения воздуха помещение категории 3а по ГОСТ 30494-2011.</p>
+   <div>При ассимиляции теплоизбытков:<img src="img/15.png" alt=""></div>
+   <p>Δt_2 – допустимое отклонение температуры воздуха в струе приточного воздуха от нормируемой температуры воздуха в рабочей зоне в зоне прямого воздействия приточной струи для общественных зданий Δt_2=1,5 ℃.</p>
+   <p>Сравнивая допустимые и получившиеся значения получаем, что оба условия выполняются.</p>
+   <p>Для проверки условия настилания определим геометрическую характеристику струи:</p>
+   <img src="img/16.png" alt="">
+   <div>
+      H = (5,45 ⋅ <label for=""><input type="text" placeholder="Введите значение" data-speed-coefficient></label> ⋅ <label for=""><input type="text" placeholder="?" data-sumVo disabled></label> ⋅ ∜(<label for=""><input type="text" placeholder="Введите значение" data-afact></label>)) / √(<label for=""><input type="text" placeholder="Введите значение" data-temperature-coefficient></label> ⋅ 2) = <span data-sumH>?</span> м
+   </div>
+   <div>
+      Проверим условие прилипания струи - х = <label for=""><input type="text" placeholder="?" data-sumX disabled></label> м, а 0,5 Н = <span data-sumH2>?</span>, так как х&lt;0,5 Н - условие выполняется.
+   </div>
+   <h2>4. Аэродинамический расчет системы вентиляции </h2>
+   <p>Аэродинамический расчет механических систем вентиляцииD и кондиционирования воздуха проводят с целью определения диаметров или размеров прямоугольных сечений воздуховодов или каналов, нахождения потерь давления, возникающих при движении воздуха в вентиляционной сети и подбора вентилятора.</p>
+   <p>
+      1.	Ориентировочную площадь сечения воздуховода fор, м , определяют по
+      величине раcхода воздуха на участке L и по рекомендуемой скорости движения воздуха vор, равной 6–7 м/с на магистралях и 4–5 м/с – в воздухозаборной шахте и на конечных ответвлениях:
+   </p>
+   <img src="img/17.png" alt="">
+   <p>2.	Затем вычисляют предварительный размер воздуховода на участке:</p>
+   <p>ахb	и	округляют	до	ближайшего	стандартного	размера.	Необходимо принимать размеры воздуховодов строго стандартного размера;</p>
+   <p>3.	После выбора диаметра сечения воздуховода уточняют скорость воздуха:</p>
+   <img src="img/18.png" alt="">
+   <p>где 𝑓ф – фактическая площадь сечения, м2:</p>
+   <p>𝑓ф = 𝑎 ⋅ 𝑏</p>
+   <p>4.	Вычисляем dэкв:</p>
+   <p>dэкв = 2ab/(a+b)</p>
+   <p>5.	Далее по величине 𝑣𝑐р и dэкв определяют удельные потери давления на трение R, Па/м по формуле:</p>
+   <img src="img/19.png" alt="">
+   <p>6.	Полные потери давления на трение для всего участка, получают умножением удельных потерь R на длину участка l, Rl, Па.</p>
+   <p>7.	Затем определяют динамическое давление на участке:</p>
+   <img src="img/20.png" alt="">
+   <p>8.	где ρ – плотность воздуха при стандартных условиях ρ = 1,2 кг/м3; Все данные заносим в таблицы</p>
+   <p>9.	Далее на участке выявляют местные сопротивления, определяют коэффициенты местных сопротивлений (КМС) ξ и вычисляют сумму КМС на данном участке (Σξ). Все местные сопротивления заносим в таблицы </p>
+   <h2>5. Подбор оборудования системы вентиляции</h2>
+   <h3>5.1 Подбор приточной установки</h3>
+   <div>
+      Приточная установка для организации механической вентиляции помещений поставляется в виде отдельных элементов, собираемых в установку на площадке монтажа. Для системы с расходом L = <label for=""><input type="text" placeholder="Введите значение" data-system-control></label> [м3/ч] по каталогу
+      установок КЦКП выбираем КЦКП с Lном=1,8 (Lмин= 1,0 Lмакс= 2,8) с габаритами 700х450.
+   </div>
+   <p>В состав приточной установки входят приемная секция с вертикальным воздушным клапаном, блок фильтра, блок водяного нагревателя и блок с радиальным вентилятором.</p>
+   <p>Приемная секция</p>
+   <p>Аэродинамическое сопротивление приемной секции:</p>
+   <p>где,</p>
+   <img src="img/21.png" alt="">
+   <p>𝜉 – КМС приемной секции с регулирующим клапаном, равный 2,6.</p>
+   <p>𝜌 и 𝑣 – плотность и скорость воздуха в приемной секции.</p>
+   <div>
+      𝜌 = (353 / (273 + t_в)) = (353 / (273 + (<label for=""><input type="text" placeholder="Введите значение" data-plotSp></label>))) = <span data-sumP>?</span> кг/м3
+   </div>
+   <img src="img/22.png" alt="">
+   <div>
+      𝑣в = (𝐿𝑐 / (𝑓ж.с. ∙ 3600)) = (<label for=""><input type="text" placeholder="Введите значение" data-system-control></label> / (0,21 ∙ 3600)) = <span data-sumVv>?</span> м/с
+   </div>
+   <p>Тогда</p>
+   <div>
+      ∆𝑷пр = (2,6 * <label><input type="text" placeholder="?" data-sumP disabled></label> * <label><input type="text" placeholder="?" data-sumVv disabled></label>^2) / 2 = <span data-sumRpr>?</span> Па
+   </div>
+   <p>Длина приемной секции – 700 мм</p>
+   <p>Секция фильтров</p>
+   <p>Выбираем ячейковый фильтр класса G3 с средней степенью очистки, так как к обслуживаемым помещениям предъявлены средние требования по чистоте воздуха с тонкой очисткой</p>
+   <p>Выбираем фильтр с длиной секции 260 мм, потери составляют ∆𝑷ф = 150 [Па]</p>
+   <p>Секция водяного воздухонагревателя</p>
    <script src="script.js"></script>
 </body>
 </html>
