--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             </mrow>
             <mrow>
                <mtext>
-                  <label for=""<input type="text" placeholder="Введите значение" data-speed-coefficient></label>
+                  <label for=""><input type="text" placeholder="Введите значение" data-speed-coefficient></label>
                </mtext>
                <mo>⋅</mo> 
                <mtext>
